# dna-analysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agents.md  dna  docker-compose.yml  download_data.sh  import.sh  pyproject.toml  reset.sh  test.sh
app/: cli.py  config.py  db.py  models.py
app/annotate/: importer.py  matcher.py
app/explain/: __init__.py  contract.py  prompt.py
app/ingest/: loader.py  parser.py
app/policy/: engine.py
scripts/: generate_test_data.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_e2e.py  test_importer.py  test_loader.py  test_matcher.py  test_models.py  test_parser.py  test_policy.py  test_prompt_rules.py
tests/fixtures/: sample_clinvar.txt  sample_gwas.tsv  sample_myheritage.csv
